# paylab

./: .env.example  .gitignore  Dockerfile  E2E_TESTING_SETUP.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  qodo.agent.toml
.github/workflows/: ci.yml  diff-test-suite-agent.yml
.qodo/: config.toml  diff-test-suite.agent.toml
app/: main.py  models.py  payment_service.py
app/core/: config.py
app/frontend/: index.html  main.js
app/tests/: test_main.py
payments_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
playwright-report/: index.html
test-results/: .last-run.json
tests/: test_payments.py
tests/e2e/: basic.spec.ts  payments_ui_invalid.spec.ts
