[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payments-service"
version = "0.1.0"
description = "Enterprise-grade Payments Microservice with FastAPI"
authors = [{name="Your Name"}]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.11",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing"
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
